--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: #1F1926;
     margin: 0;
     padding:0;
-    min-height: 100vh;
+    max-height: 100vh;
 }
 
 .tiles {
