--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@ body {
     background-color: #1F1926;
     margin: 0;
     padding:0;
-    max-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+    height: 100vh;
 }
 
 .tiles {
@@ -13,7 +16,7 @@ body {
     gap: 1rem;
 }
 
-.card {
+.card-image {
     max-width: 100%;
     cursor: pointer;
 }
