--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,161 @@
+@font-face {
+    font-family: 'Stella';
+    src: url('fonts/stella.ttf');
+}
+
 body {
     background-color: #1F1926;
+    font-family: 'Stella', sans-serif;
+    color:#ffffff;
     margin: 0;
-    padding:0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
     height: 100vh;
 }
 
+.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+header {
+    width: 100%;
+    text-align: center;
+}
+
+.game-title {
+    font-size: 4rem;
+    margin: 1rem;
+}
+
+.game-subtitle {
+    font-size: 3rem;
+    color:#1F1926;
+    margin: 0.5rem 0;
+}
+
+.difficulty-options label{
+    cursor: pointer;
+    padding-bottom: 0.2rem;
+    margin: 0 1rem;
+    transition: color 0.3s;
+}
+
+.difficulty-options label:hover{
+    color: #ff914d;
+}
+
+.difficulty-options input[type="radio"]{
+    display: none;
+}
+
+.difficulty-options input[type="radio"]:checked + label{
+    color: #ff914d;
+    text-decoration: underline;
+}
+
+button {
+    font-family: 'Stella', sans-serif;
+    font-size: 1.8rem;
+    padding: 0.5rem 1rem;
+    margin: 0.5rem;
+    border: 0.125rem solid #ffffff;
+    border-radius: 0.5rem;
+    background-color: #ff914d;
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
+    color: #ffffff;
+    text-shadow: 0 0 10px #000000;
+    cursor: pointer;
+    transition: background-color 0.3s color 0.3s box-shadow 0.3s text-shadow 0.3s;
+}
+
+button:hover {
+    background-color: #ffde59;
+    color: #1F1926;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
+    text-shadow: 0 0 2px #ffffff; 
+    transform: scale(1.05)
+}
+
+.hide-container {
+    display: none;
+}
+
+.show-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.banner-container {
+    background-color:#ffffff;
+    color:#1F1926;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
+    margin: 1rem auto;
+}
+
+#subheader-container, .difficulty-options {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 0;
+    margin: 0.5rem 0;
+}
+
+.rules-container {
+    display: flex;
+    align-items: center;
+    padding: 0.2rem;
+    border: 0.125rem solid #ffffff;
+    border-radius: 0.5rem;
+    background-color: #ffde59;
+    color: #1F1926;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
+    text-shadow: 0 0 2px #ffffff; 
+}
+
+.rules-container p {
+    padding: 0;
+    margin: 0 0.25rem;
+}
+
+.rules-introductory-text {
+    font-size: 2.5rem;
+}
+
+.rules-value {
+    font-size: 1.3rem;
+}
+
 .tiles {
-    margin: 3rem auto;
-    width: fit-content;
     display: grid;
-    grid-template-columns: repeat(4, 12.5rem);
-    gap: 1rem;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0.8rem;
+    margin: 1rem auto;
 }
 
 .card-container {
     position: relative; /*reference point for the child elements -the images-*/
-    width: 12.5rem;
-    height: 12.5rem;
+    cursor: pointer;
+    width: 11vw;
+    height: 11vw;
+    max-width: 180px;
+    max-height: 180px;
     perspective: 1000px; /*gives a 3d space effect*/
 }
 
+.card-container.hidden {
+    visibility: hidden;
+}
+
 .card-image {
-    max-width: 100%;
-    cursor: pointer;
     position: absolute; /*to layer the cards one on top of the other */
+    width: 100%;
     backface-visibility: hidden; /* to hide the frontside when not clicked */
     transition: transform 0.6s; /*to make the transformation (flip) smooth over 0.6 seconds */
 }
@@ -36,6 +165,7 @@ body {
 }
 
 .backside {
+    background-color: #ffffff;
     transform: rotateY(0deg); /*default: the back side of the card is visible*/
 }
 
